--- a/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
+++ b/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
@@ -4,11 +4,15 @@
     name: "{{ item }}"
     state: present
   with_items: "{{ install_packages }}"
+  when: 
+  - ansible_facts['system'] == "Linux"
 
 - name: Remove specified software packages
   package:
     name: "{{ item }}"
     state: absent
   with_items: "{{ remove_packages }}"
+  when: 
+  - ansible_facts['system'] == "Linux"
         
     
