--- a/ansible/roles/crossplatform-package-manager/defaults/main.yml
+++ b/ansible/roles/crossplatform-package-manager/defaults/main.yml
@@ -10,3 +10,10 @@ remove_packages: []
 
 # list of packages to update
 update_packages: []
+
+# list of linux only install
+install_linux_packages: []
+
+# list of mac only install
+install_mac_packages: []
+install_mac_cask_packages: []
