--- a/ansible/roles/crossplatform-package-manager/defaults/main.yml
+++ b/ansible/roles/crossplatform-package-manager/defaults/main.yml
@@ -6,7 +6,7 @@ install_all_package_updates: true
 install_packages: []
 
 # list of packages to remove
-remove_packages: []
+remove_linux_packages: []
 
 # list of packages to update
 update_packages: []
