Add Mac Install

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,7 +17,7 @@
       - glances
       - golang
       - cmake
-      - virtualbox
+      #- virtualbox
       - tmux
       - wget
       - httpie
