--- a/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
+++ b/ansible/roles/crossplatform-package-manager/tasks/install-remove-packages.yml
@@ -43,6 +43,12 @@
   when: 
     - ansible_facts['system'] == "Darwin"
 
+- name: Install homebrew cask packages
+  homebrew_cask:
+    name: '{{ item }}'
+    state: installed
+    with_items: "{{ install_mac_cask_packages }}"
+
 
 - name: Uninstall homebrew packages
   homebrew:
