--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -38,13 +38,15 @@
       - flameshot #screenshot tool
       - fonts-firacode
       - fonts-powerline
+    install_mac_packages:
+      - https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
     install_mac_cask_packages:
       - virtualbox
       - kitty
       - joplin      
       - font-fira-code
       - font-hack-nerd-font
-      - https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
+      
 
     
   roles:
