--- a/ansible/roles/oh-my-zsh/tasks/install.yml
+++ b/ansible/roles/oh-my-zsh/tasks/install.yml
@@ -18,6 +18,7 @@
 
 - name: set permissions of oh-my-zsh for users
   become: yes
+  become_user: '{{ username }}'
   file:
     path: '~{{ username }}/.oh-my-zsh'
     # Prevent the cloned repository from having insecure permissions. Failing to do
