--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -38,6 +38,7 @@
       - flameshot #screenshot tool
       - fonts-firacode
       - fonts-powerline
+      - vlc
     install_mac_packages:
       - https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
     install_mac_cask_packages:
@@ -46,6 +47,7 @@
       - joplin      
       - font-fira-code
       - font-hack-nerd-font
+      - vlc
       
 
     
