--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -54,6 +54,7 @@
   roles:
     - crossplatform-package-manager
     - nerdfonts
+    - docker
     - role: oh-my-zsh
       users:
         - username: "{{ ansible_user_id }}"
