--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -41,6 +41,7 @@
       - vlc
       - stacer
       - vagrant
+      - terraform
     install_mac_packages:
       - https://raw.githubusercontent.com/kadwanev/bigboybrew/master/Library/Formula/sshpass.rb
     install_mac_cask_packages:
@@ -51,6 +52,7 @@
       - font-hack-nerd-font
       - vlc
       - vagrant
+      - terraform
       
 
     
