Configure zsh go env

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -28,6 +28,7 @@
       - awscli
       - azure-cli
       - bash-completion
+      - dep
     install_linux_packages:
       - zsh
       - powertop
