--- a/ansible/roles/vscode/tasks/install-extensions.yml
+++ b/ansible/roles/vscode/tasks/install-extensions.yml
@@ -1,6 +1,6 @@
 ---
 - name: install extensions
-  become: yes
+  become: no
   become_user: '{{ item.0.username }}'
   visual_studio_code_install_extension:
     executable: '{{ visual_studio_code_exe }}'
