Disable Joplin install on linux as root

--- a/ansible/roles/joplinapp-linux/tasks/main.yml
+++ b/ansible/roles/joplinapp-linux/tasks/main.yml
@@ -4,7 +4,7 @@
     - include_tasks: 
         file: install.yml
         apply:
-          become: true
+          become: false
           become_user: "{{ user.username }}"
       with_items: "{{ users }}"
       loop_control:
