--- a/ansible/roles/packer/tasks/main.yml
+++ b/ansible/roles/packer/tasks/main.yml
@@ -1,8 +1,10 @@
 ---
 - name: Ensure unzip is installed.
+  become: true
   package: name=unzip state=present
 
 - name: Download and unarchive Packer Linux.
+  become: true
   unarchive:
     src: https://releases.hashicorp.com/packer/{{ packer_version }}/packer_{{ packer_version }}_linux_{{ packer_arch }}.zip
     dest: "{{ packer_bin_path }}"
@@ -13,6 +15,7 @@
     - ansible_facts['system'] == "Linux"
 
 - name: Download and unarchive Packer Mac.
+  become: true
   unarchive:
     src: https://releases.hashicorp.com/packer/{{ packer_version }}/packer_{{ packer_version }}_darwin_{{ packer_arch }}.zip
     dest: "{{ packer_bin_path }}"
