--- a/ansible/roles/terraform/tasks/main.yml
+++ b/ansible/roles/terraform/tasks/main.yml
@@ -19,13 +19,15 @@
 
 
 - name: Create symlink tfenv Linux
-  become: true
+  become: yes
+  become_user: '{{ user.username }}'
   file: src=~/.tfenv/bin/tfenv dest=/usr/local/bin/tfenv state=link
   when: 
     - ansible_facts['system'] == "Linux"
 
 - name: Create symlink terraform Linux
-  become: true
+  become: yes
+  become_user: '{{ user.username }}'
   file: src=~/.tfenv/bin/terraform dest=/usr/local/bin/terraform state=link
   when: 
     - ansible_facts['system'] == "Linux"
