--- a/ansible/roles/terraform/tasks/main.yml
+++ b/ansible/roles/terraform/tasks/main.yml
@@ -20,14 +20,14 @@
 
 - name: Create symlink tfenv Linux
   become: yes
-  become_user: '{{ user.username }}'
+  become_user: '{{ ansible_user_id }}'
   file: src=~/.tfenv/bin/tfenv dest=/usr/local/bin/tfenv state=link
   when: 
     - ansible_facts['system'] == "Linux"
 
 - name: Create symlink terraform Linux
   become: yes
-  become_user: '{{ user.username }}'
+  become_user: '{{ ansible_user_id }}'
   file: src=~/.tfenv/bin/terraform dest=/usr/local/bin/terraform state=link
   when: 
     - ansible_facts['system'] == "Linux"
