Update TF Version

--- a/ansible/roles/terraform/tasks/main.yml
+++ b/ansible/roles/terraform/tasks/main.yml
@@ -14,6 +14,7 @@
   when: 
     - ansible_facts['system'] == "Darwin"
 
+
 - name: Create symlink tfenv Linux
   become: yes
   file: src=/home/{{ ansible_user_id }}/.tfenv/bin/tfenv dest=/usr/local/bin/tfenv state=link
@@ -28,3 +29,6 @@
 
 - name: Install terraform version {{ terraform_version }}
   command: tfenv install {{ terraform_version }}
+
+- name: Use terraform version {{ terraform_version }}
+  command: tfenv use {{ terraform_version }}
