--- a/ansible/roles/awscli/tasks/main.yml
+++ b/ansible/roles/awscli/tasks/main.yml
@@ -3,9 +3,9 @@
   become: true
   unarchive:
     src: https://awscli.amazonaws.com/awscli-exe-linux-{{ awscli_platform }}-{{ awscli_version }}.zip
-    dest: "{{ awscli_tmp_path }}"
+    dest: /home/{{ ansible_user_id }}/tmp/aws
     remote_src: true
-    creates: "{{ awscli_tmp_path }}/install"
+    creates: "/home/{{ ansible_user_id }}/tmp/aws/install"
     mode: 0755
   when: 
     - ansible_facts['system'] == "Linux"
@@ -20,13 +20,13 @@
 
 
 - name: Install awscli version {{ awscli_version }} Linux
-  command: {{ awscli_tmp_path }}/install
+  command: /home/{{ ansible_user_id }}/tmp/aws/install
   when: 
     - ansible_facts['system'] == "Linux"
 
 - name: Cleanup awscli tmp folder
   file:
-    path: {{ awscli_tmp_path }}/
+    path: /home/{{ ansible_user_id }}/tmp/aws/
     state: absent
   when: 
     - ansible_facts['system'] == "Linux"
