--- a/ansible/roles/awscli/tasks/main.yml
+++ b/ansible/roles/awscli/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Create awscli tmp folder
   file:
     path: /home/{{ ansible_user_id }}/tmp/aws/
-    state: present
+    state: directory
   when: 
     - ansible_facts['system'] == "Linux"
 
