--- a/ansible/roles/awscli/tasks/main.yml
+++ b/ansible/roles/awscli/tasks/main.yml
@@ -26,6 +26,8 @@
 - name: Install awscli version {{ awscli_version }} Linux
   become: true
   command: /home/{{ ansible_user_id }}/tmp/aws/install
+  args:  
+      creates: /usr/bin/aws
   when: 
     - ansible_facts['system'] == "Linux"
     - not st.stat.exists
