--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -82,41 +82,41 @@
           - { key: "sidebarVisibility", val: "1" }
           - { key: "dateFormat", val: "YYYY-MM-DD" }
           - { key: "sync.target", val: "5" }
-    #- role: vscode
-    #  users:
-    #    - username: "{{ ansible_user_id }}"
-    #      visual_studio_code_extensions:
-    #        - streetsidesoftware.code-spell-checker
-    #        - wholroyd.jinja
-    #        - ms-python.python
-    #        - ms-azuretools.vscode-docker
-    #        - golang.Go
-    #        - pkief.material-icon-theme
-    #        - yzhang.markdown-all-in-one
-    #      visual_studio_code_settings_overwrite: yes
-    #      visual_studio_code_settings: {
-    #        "workbench.colorTheme": "Solarized Dark",
-    #        "workbench.iconTheme": "material-icon-theme",
-    #        "terminal.integrated.fontFamily": "Hack Nerd Font",
-    #        "files.autoSave": "afterDelay",
-    #        "editor.formatOnSave": true,
-    #        "editor.formatOnPaste": true,
-    #        "editor.tabSize": 4,
-    #        "editor.insertSpaces": true,
-    #        "editor.renderWhitespace": "all",
-    #        "terminal.integrated.fontSize": 14,
-    #        "editor.fontSize": 15,
-    #        "[Log]": {
-    #            "editor.fontSize": 15
-    #        },
-    #        "window.zoomLevel": 0,
-    #        "editor.fontFamily": "Fira Code",
-    #        "editor.fontLigatures": true,
-    #        "go.formatTool": "goimports",
-    #        "go.useLanguageServer": true,
-    #        "editor.rulers": [80, 100, 120],
-    #        "editor.renderWhitespace": true,
-    #        "files.associations": {
-    #          "Vagrantfile": "ruby"
-    #        }
-    #      }
+    - role: vscode
+      users:
+        - username: "{{ ansible_user_id }}"
+          visual_studio_code_extensions:
+            - streetsidesoftware.code-spell-checker
+            - wholroyd.jinja
+            - ms-python.python
+            - ms-azuretools.vscode-docker
+            - golang.Go
+            - pkief.material-icon-theme
+            - yzhang.markdown-all-in-one
+          visual_studio_code_settings_overwrite: yes
+          visual_studio_code_settings: {
+            "workbench.colorTheme": "Solarized Dark",
+            "workbench.iconTheme": "material-icon-theme",
+            "terminal.integrated.fontFamily": "Hack Nerd Font",
+            "files.autoSave": "afterDelay",
+            "editor.formatOnSave": true,
+            "editor.formatOnPaste": true,
+            "editor.tabSize": 4,
+            "editor.insertSpaces": true,
+            "editor.renderWhitespace": "all",
+            "terminal.integrated.fontSize": 14,
+            "editor.fontSize": 15,
+            "[Log]": {
+                "editor.fontSize": 15
+            },
+            "window.zoomLevel": 0,
+            "editor.fontFamily": "Fira Code",
+            "editor.fontLigatures": true,
+            "go.formatTool": "goimports",
+            "go.useLanguageServer": true,
+            "editor.rulers": [80, 100, 120],
+            "editor.renderWhitespace": true,
+            "files.associations": {
+              "Vagrantfile": "ruby"
+            }
+          }
