--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -14,6 +14,7 @@
     install_all_package_updates: true
     repo_brew_tap: 
       - homebrew/cask-fonts
+      - homebrew/dupes
     install_packages:
       - htop
       - glances
@@ -32,6 +33,7 @@
       #- stacer
       #- kitty
       #- timeshift # Backup Linux
+      #- kubectl
       - zsh
       - powertop
       - net-tools
@@ -51,6 +53,7 @@
       - kubectl
       - jq
       - dep
+      - nano
     install_mac_cask_packages:
       - virtualbox
       - kitty
