--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -66,6 +66,7 @@
     - awscli
     - azure-cli
     - crossplatform-package-manager
+    - nerdfonts
     - docker
     - role: oh-my-zsh
       users:
