Add FiraCode, fix nerdfonts issues, Customize VSCode

--- a/ansible/roles/nerdfonts/defaults/main.yml
+++ b/ansible/roles/nerdfonts/defaults/main.yml
@@ -14,9 +14,9 @@ nerdfonts_fonts:
 #- fontname: '3270'
 #  caskname: 'font-3270-nerd-font'
 #  mono: 'font-3270-nerd-font-mono'
-- fontname: 'AnonymousPro'
-  caskname: 'font-anonymouspro-nerd-font'
-  mono: 'font-anonymouspro-nerd-font-mono'
+#- fontname: 'AnonymousPro'
+#  caskname: 'font-anonymouspro-nerd-font'
+#  mono: 'font-anonymouspro-nerd-font-mono'
 #- fontname: 'Arimo'
 #  caskname: ''
 #  mono: ''
@@ -42,8 +42,8 @@ nerdfonts_fonts:
 #  caskname: 'font-fantasquesansmono-nerd-font'
 #  mono: 'font-fantasquesansmono-nerd-font-mono'
 - fontname: 'FiraCode'
-  caskname: 'font-firacode-nerd-font'
-  mono: 'font-firacode-nerd-font-mono'
+  caskname: 'font-fira-code'
+  mono: 'font-fira-mono'
 #- fontname: 'FiraMono'
 #  caskname: 'font-firamono-nerd-font'
 #  mono: 'font-firamono-nerd-font-mono'
@@ -107,9 +107,9 @@ nerdfonts_fonts:
 #- fontname: 'RobotoMono'
 #  caskname: 'font-robotomono-nerd-font'
 #  mono: 'font-robotomono-nerd-font-mono'
-- fontname: 'SourceCodePro'
-  caskname: 'font-sourcecodepro-nerd-font'
-  mono: 'font-sourcecodepro-nerd-font-mono'
+#- fontname: 'SourceCodePro'
+#  caskname: 'font-sourcecodepro-nerd-font'
+#  mono: 'font-sourcecodepro-nerd-font-mono'
 #- fontname: 'ShareTechMono'
 #  caskname: 'font-sharetechmono-nerd-font'
 #  mono: 'font-sharetechmono-nerd-font'
