--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -95,8 +95,38 @@
             - yzhang.markdown-all-in-one
           visual_studio_code_settings_overwrite: yes
           visual_studio_code_settings: {
-            "workbench.colorTheme": "Solarized Dark",
-            "workbench.iconTheme": "material-icon-theme",
+            "workbench.colorCustomizations": {
+              "activityBarBadge.background": "#80CBC4",
+              "list.activeSelectionForeground": "#80CBC4",
+              "list.inactiveSelectionForeground": "#80CBC4",
+              "list.highlightForeground": "#80CBC4",
+              "scrollbarSlider.activeBackground": "#80CBC450",
+              "editorSuggestWidget.highlightForeground": "#80CBC4",
+              "textLink.foreground": "#80CBC4",
+              "progressBar.background": "#80CBC4",
+              "pickerGroup.foreground": "#80CBC4",
+              "tab.activeBorder": "#80CBC4",
+              "terminal.background": "#002833",
+              "terminal.foreground": "#839496",
+              "terminal.ansiBlack": "#003541",
+              "terminal.ansiBlue": "#268bd2",
+              "terminal.ansiBrightBlack": "#586e75",
+              "terminal.ansiBrightBlue": "#839496",
+              "terminal.ansiBrightCyan": "#93a1a1",
+              "terminal.ansiBrightGreen": "#586e75",
+              "terminal.ansiBrightMagenta": "#6c6ec6",
+              "terminal.ansiBrightRed": "#cb4b16",
+              "terminal.ansiBrightWhite": "#fdf6e3",
+              "terminal.ansiBrightYellow": "#657b83",
+              "terminal.ansiCyan": "#2aa198",
+              "terminal.ansiGreen": "#859901",
+              "terminal.ansiMagenta": "#d33682",
+              "terminal.ansiRed": "#dc322f",
+              "terminal.ansiWhite": "#eee8d5",
+              "terminal.ansiYellow": "#b58901",
+              "terminal.selectionBackground": "#003541"
+            },
+            "workbench.colorTheme": "Material Theme",
             "terminal.integrated.fontFamily": "Hack Nerd Font",
             "files.autoSave": "afterDelay",
             "editor.formatOnSave": true,
