--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -106,7 +106,7 @@
               "progressBar.background": "#80CBC4",
               "pickerGroup.foreground": "#80CBC4",
               "tab.activeBorder": "#80CBC4",
-              "terminal.background": "#002833",
+              "terminal.background": "#050f2e",
               "terminal.foreground": "#839496",
               "terminal.ansiBlack": "#003541",
               "terminal.ansiBlue": "#268bd2",
